[project]
name = "hubert-mamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "transformers<5",
    "torchaudio==2.8.0",
    "jupyter",
    "einops",
    "scikit-learn",
    "numpy",
    "pandas",
    "polars",
    "tqdm",
    "PyYAML",
    "python-dotenv",
    # cli
    "click",
    # analyze
    "matplotlib",
    "plotly",
    # monitor
    "nvitop==1.6.0",
    "wandb",
    # format
    "isort",
    "soundfile>=0.13.1",
    "librosa>=0.11.0",
]
[tool.uv]
extra-index-url = ["https://pypi.org/simple", "https://download.pytorch.org/whl/cu128"]

[tool.uv.sources]
ptflops = { git = "https://github.com/sovrasov/flops-counter.pytorch.git" }

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
